--- a/index.html
+++ b/index.html
@@ -4,38 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- <img src = "https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"> -->
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione veritatis quo nisi accusantium nulla eveniet iure est distinctio? Soluta reiciendis magnam aperiam. Ipsum laudantium quo corporis quibusdam accusamus doloribus exercitationem.
-        Sign up now to get started.
-    </h2>
-    <h2>You <em>know</em> you want to</h2>
-    <h2> Let's do this!</h2>
-    <form action="">
-        <div class="name">
-            <label for="fname">First Name</label>
-            <input id="fname" name="fname" type="text" required>
-            <label for="lname">Last Name</label>
-            <input id="lname" name="lname" type="text">
+    <img src = "https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <div class="container">
+        <div class="heading">
+            <div class="heading-content">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione veritatis quo nisi accusantium nulla eveniet iure est distinctio?</h2>
+                <h2>Sign up now to get started.</h2>
+                <h2>You <em>know</em> you want to</h2>
+            </div>
         </div>
-        <div class="contact">
-            <label for="mail">Email</label>
-            <input id="mail" name="mail" type="email" required>
-            <label for="phno">Phone Number</label>
-            <input id="phno" name="phno" type="tel" required>
+        <div class="form-container">
+            <div class="form-content">
+                <h2> Let's do this!</h2>
+                <form id="form" action="">
+                    <div class="name">
+                        <div>
+                            <label for="fname">First Name</label>
+                            <input id="fname" name="fname" type="text" required>
+                        </div>
+                        <div>
+                            <label for="lname">Last Name</label>
+                            <input id="lname" name="lname" type="text">
+                        </div>
+                    </div>
+                    <div class="contact">
+                        <div>
+                            <label for="mail">Email</label>
+                            <input id="mail" name="mail" type="email" required>
+                        </div>
+                        <div>
+                            <label for="phno">Phone Number</label>
+                            <input id="phno" name="phno" type="tel" required>
+                        </div>
+                    </div>
+                    <div class="password">
+                        <div>
+                            <label for="pwd">Password</label>
+                            <input id="pwd" name="pwd" type="password" required>
+                        </div>
+                        <div>
+                            <label for="confirm-pwd">Confirm Password</label>
+                            <input id="confirm-pwd" name="confirm-pwd" type="password" required>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="password">
-            <label for="pwd">Password</label>
-            <input id="pwd" name="pwd" type="password" required>
-            <label for="confirm-pwd">Confirm Password</label>
-            <input id="confirm-pwd" name="confirm-pwd" type="password" required>
+        <div class="login">
+            <button type="submit" form="form">Create Account</button>
+            <div>Already have an account? <a href="">Log in</a></div>
         </div>
-        <button type="submit">Create Account</button>
-    </form>
-    <div class="login">
-        Already have an account? <a href="">Log in</a>
     </div>
-    
 </body>
 </html>
